Bound learned lastCommitted opTime to lastWritten instead of lastApplied

XMLWordPrintableJSON

    • Replication
    • Fully Compatible
    • Repl 2024-04-01
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      In SERVER-85702, we changed to check the term of lastWritten instead of lastApplied when updating lastCommitted, but we didn't change the next line to use lastWritten to bound lastCommitted. We should also update the log line below that.

            Assignee:
            Kishore Devireddy (Inactive)
            Reporter:
            Wenbin Zhu
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: