SERVER-87920: Bound learned lastCommitted opTime to lastWritten instead of lastApplied (#20153)

GitOrigin-RevId: 1ffa7027bb85dd7be62d14e0ff76fe424b6d4e41